# sigmaterm

./: Cargo.toml  README.md  main
assets/: emoji_map.ron
src/: header.rs  main.rs  manager.rs  parser.rs  terminal.rs  utils.rs  window.rs
