[package]
name = "sigmaterm"
version = "0.1.0"
edition = "2024"

[dependencies]
ptyprocess = "=0.5.0"
egui = "0.33.2"
eframe = "0.33.2"
egui_extras = { version = "0.33.2", features = ["default", "image", "svg"] }
libc = "0.2.178"
ron = "0.12"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
